Archive2/d9/8d07c2d443450a/output
main.cpp: In function 'int main()':
main.cpp:32:7: error: no match for 'operator+=' (operand types are 'Stack<int>' and 'int')
     s += 5;
       ^
main.cpp:32:7: note: candidate is:
main.cpp:24:10: note: Stack<T> Stack<T>::operator+=(const Stack<T>&) [with T = int]
 Stack<T> Stack<T>::operator += (const Stack<T> &str)
          ^
main.cpp:24:10: note:   no known conversion for argument 1 from 'int' to 'const Stack<int>&'
